// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";
// Service name
package metrics_query;

// Mandatory imports.
import "google/api/annotations.proto";
import public "github.com/pensando/sw/venice/utils/apigen/annotations/includes.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "metrics_query.proto";

// fileGrpcDest is the gRPC destination for this service
option (venice.fileGrpcDest) = "pen-aggregator";
// fileApiServerBacked should be set to false to indicate that the set of services defined in this
// file are not backed by the API server.
option (venice.fileApiServerBacked) = false;

// MetricsQuery service API
service MetricsV1 {
    option (venice.apiPrefix) = "metrics";

    // API Version.
    option (venice.apiVersion) = "v1";

    // In the example below a query like
    //    http://<...>/venice/v1/metrics/query
    //  generates a RPC call Query
    rpc Query (QuerySpec) returns (QueryResponse) {
        option (google.api.http) = {
            post: "/metrics"
            body: "*"
            additional_bindings {
                get: "/metrics"
            }
        };
    }
}
